<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mobileproject.LoginActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:paddingBottom="@dimen/marginbottom_login_underlogintitle"
        android:textSize="@dimen/textsize_login_title"
        android:layout_gravity="center_horizontal"/>


    <TextView android:id="@+id/textview_login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_username"
        android:textSize="@dimen/textsize_login_usernamepassword" />

    <EditText android:id="@+id/edittext_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_usernamehint"
        android:inputType="textNoSuggestions"
        android:textSize="@dimen/textsize_login_usernamepassword" />

    <TextView android:id="@+id/textview_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_password"
        android:textSize="@dimen/textsize_login_usernamepassword"
        android:layout_marginTop="@dimen/margintop_login_underFields"/>

    <EditText android:id="@+id/edittext_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_passwordhint"
        android:inputType="textPassword"
        android:textSize="@dimen/textsize_login_usernamepassword"
        android:layout_marginBottom="@dimen/margin_login_belowButtons"/>

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button android:id="@+id/button_login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_login"
            android:textSize="@dimen/textsize_login_loginbutton"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/margin_login_buttons"
            android:onClick="login"/>

        <Button android:id="@+id/button_login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_register"
            android:textSize="@dimen/textsize_login_loginbutton"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/margin_login_buttons"
            android:onClick="register"/>
    </android.support.v7.widget.ButtonBarLayout>
</LinearLayout>
